# SSBT

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  synthetic_ohlcv.parquet  trade_log.csv
SSBT/: backtester.py  position.py  risk.py  strategy.py  types.py  utils.py
analytics/: optimization.py  plots.py
core/: _numba_kernels.py  engine.py  events.py  matching.py  multi_engine.py  portfolio.py  vectorised.py
data/: feed.py
examples/: MovingAverageCrossover.py  monster.py  multi_symbol.py  sma_cross.py  sweep_example.py  vectorised_benchmark.py
portfolio/: allocation.py
ssbt/: __init__.py
ssbt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ssbt/analytics/: metrics.py  sweep.py  walkforward.py
ssbt/core/: engine.py  events.py  matching.py  portfolio.py
ssbt/data/: feed.py
ssbt/examples/: sma_cross.py  sweep_example.py
ssbt/strategy/: base.py
strategy/: base.py
